<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/custom_background_dialog">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/dp360"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp20"
            android:text="@string/put_into_campaign"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="@dimen/dp20" />
        <LinearLayout
            android:layout_marginTop="@dimen/dp10"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginRight="@dimen/dp10"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_right"
                android:id="@+id/iv_tru"
                android:layout_width="@dimen/dp20"
                android:layout_height="@dimen/dp20" />
            <TextView
                android:gravity="center"
                android:textColor="@color/red"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_marginRight="@dimen/dp5"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/dp20"
                android:id="@+id/tv_thay_doi"
                android:layout_width="@dimen/dp80"
                android:layout_height="wrap_content"
                android:text="100"
                android:background="@drawable/custom_button_white"/>
            <ImageView
                android:layout_marginLeft="@dimen/dp10"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_left"
                android:id="@+id/iv_cong"
                android:layout_width="@dimen/dp20"
                android:layout_height="@dimen/dp20" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/dp20"
            android:layout_marginTop="@dimen/dp20"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:layout_marginRight="@dimen/dp5"
                android:id="@+id/bt_thaydoi"
                android:layout_width="@dimen/dp70"
                android:layout_height="@dimen/dp35"
                android:background="@drawable/custom_button_red"
                android:fontFamily="@font/avant_garde_bold"
                android:text="@string/yes"
                android:textSize="@dimen/dp20"
                android:textColor="@color/white" />

            <Button
                android:layout_marginLeft="@dimen/dp5"
                android:id="@+id/bt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp35"
                android:background="@drawable/custom_button_black"
                android:fontFamily="@font/avant_garde_bold"
                android:text="@string/cancel_oncmapaign"
                android:textSize="@dimen/dp20"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>